added company details
