# routes/profile.routes.js
@@ -8,5 +8,6 @@ profileRoutes.get("/profile/get/:id", profile.getbyid);
 profileRoutes.put("/profile/update/:id", upload.array("image"), profile.update);
 profileRoutes.put("/profile/update/password/:id", profile.changePassword);
 profileRoutes.put("/profile/update/socials/:id", profile.updateSocialMedia);
+profileRoutes.put("/profile/update/company/:id", profile.updateCompanyDetails);
 
 export default profileRoutes;
